cart schema created. Post method working in swagger
