# models/Cart.js
@@ -5,17 +5,8 @@ const Schema = mongoose.Schema;
 let cartSchema = new Schema(
   {
     userId: {type:String, required: true},
-    products: [
-      {
-        productId:{
-          type: String
-        },
-        quantity:{
-          type: Number,
-          default: 1,
-        }
-      }
-    ],
+    productId: {type:String, required: true},
+    quantity: {type:Number, required: true}
   },
   {timestamps: true}
 )
