# server.js
@@ -14,6 +14,7 @@ app.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerDefinition))
 // import routes
 const productRoutes = require("./routes/product")
 const authRoutes = require("./routes/auth")
+const cartRoutes = require("./routes/cart")
 
 require("dotenv-flow").config();
 
@@ -34,6 +35,7 @@ mongoose.connection.once('open', () => console.log('Connected successfully to Mo
 // post, put, delete -> CRUD
 app.use("/api/products", productRoutes)
 app.use("/api/user", authRoutes)
+app.use("/api/cart", cartRoutes)
 
 const PORT = process.env.PORT || 4000;
 
