# swagger.yaml
@@ -6,7 +6,7 @@ info:
 servers:
   - url: http://localhost:4000/api/
     description: Localhost development server 
-  - url: https://smsj-men-restapi.herokuapp.com/api/
+  - url: https://kenjamin-men-restapi.herokuapp.com/api/
     description: Heroku remote server
 components:
   securitySchemes:
@@ -41,6 +41,17 @@ components:
           type: string
         date:
           type: string
+
+    Cart:
+      type: object
+      properties:
+        userId:
+          type: string
+        productId:
+          type: string
+        quantity:
+          type: number
+
 
 paths:
 
@@ -203,7 +214,26 @@ paths:
 
   
 
-
+  /cart:
+    post:
+      summary: Create a new cart item
+      description: Create a new cart item
+      security:
+        - ApiKeyAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Cart"
+      
+      responses:
+        201:
+          description: Cart item created successfully
+          content:
+            application/json:
+              schema:
+              $ref: "#/components/schemas/Cart"
     
 
     
